<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.prelogin.PreLoginFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="Home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
       />



    <ImageView
        android:id="@+id/img_usericon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/baseline_manage_accounts_24"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"
       />


    <ImageView
        android:id="@+id/img_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:tint="@color/black" />


    <LinearLayout
        android:id="@+id/lin_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".SignupActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Submit Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyLoanButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Apply Loan" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewLoansButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="View applied Loan" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>