...
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="Sign In" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
